Ajustes de rutas

--- a/es/fotografia/agricultura.html
+++ b/es/fotografia/agricultura.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>GHM - Fotografía Publicitaria</title>
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
+	<title>GHM - Fotografía Extremo</title>
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body class="fotografia">
@@ -59,10 +59,10 @@
 					        	<a class="dropdown-item" href="infraestructura.html">Infraestructura</a>
 					        	<a class="dropdown-item" href="artistico.html">Artístico</a>
 					        	<a class="dropdown-item" href="extremo.html">Extremo</a>
-					        	<a class="dropdown-item" href="#">Publicitaria</a>
+					        	<a class="dropdown-item" href="publicitaria.html">Publicitaria</a>
 					        	<a class="dropdown-item" href="retrato.html">Retrato</a>
 					        	<a class="dropdown-item" href="pruducciones.html">Producciones en estudio</a>
-					        	<a class="dropdown-item" href="agricultura.html">Agricultura</a>
+					        	<a class="dropdown-item" href="#">Agricultura</a>
 					        	<a class="dropdown-item" href="cruce.html">Cruce de Los Andes</a>
 					        </div>
 						</li>
@@ -100,8 +100,8 @@
 	</header>
 	
 	<div>
-		<img src="../img/FOTOGRAFIA-PUBLICITARIA-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
-		<img src="../img/FOTOGRAFIA-PUBLICITARIA-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
+		<img src="../../img/FOTOGRAFIA-AGRICULTURA-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
+		<img src="../../img/FOTOGRAFIA-AGRICULTURA-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
 	</div>
 
 	<div class="container bio d-block d-md-none">
@@ -116,7 +116,7 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-PUBLICITARIA-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum dolor.</h2>
@@ -129,12 +129,12 @@
 				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-PUBLICITARIA-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-02.jpg" class="img-fluid" alt="Vías de tren">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-PUBLICITARIA-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-03.jpg" class="img-fluid" alt="Personal en obra">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
@@ -147,12 +147,12 @@
 				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-PUBLICITARIA-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-PUBLICITARIA-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-05.jpg" class="img-fluid" alt="Dique Punta Negra">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
@@ -165,11 +165,27 @@
 				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-PUBLICITARIA-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
 			</div>
 		</div>
-
-
+		<div class="row align-items-center">
+			<div class="col-12 col-md-6 order-1 div-sp">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+			</div>
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
+				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
+				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+			</div>
+		</div>
+		<div class="row align-items-center">
+			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
+				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
+				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+			</div>
+			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+			</div>
+		</div>
 	</div>
 
 	<!-- Footer -->
