--- a/es/fotografia/cruce.html
+++ b/es/fotografia/cruce.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>GHM - Fotografía Retrato</title>
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
+	<title>GHM - Fotografía Extremo</title>
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body class="fotografia">
@@ -60,10 +60,10 @@
 					        	<a class="dropdown-item" href="artistico.html">Artístico</a>
 					        	<a class="dropdown-item" href="extremo.html">Extremo</a>
 					        	<a class="dropdown-item" href="publicitaria.html">Publicitaria</a>
-					        	<a class="dropdown-item" href="#">Retrato</a>
+					        	<a class="dropdown-item" href="retrato.html">Retrato</a>
 					        	<a class="dropdown-item" href="pruducciones.html">Producciones en estudio</a>
 					        	<a class="dropdown-item" href="agricultura.html">Agricultura</a>
-					        	<a class="dropdown-item" href="cruce.html">Cruce de Los Andes</a>
+					        	<a class="dropdown-item" href="#">Cruce de Los Andes</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
@@ -100,8 +100,8 @@
 	</header>
 	
 	<div>
-		<img src="../img/FOTOGRAFIA-RETRATO-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
-		<img src="../img/FOTOGRAFIA-RETRATO-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
+		<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
+		<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
 	</div>
 
 	<div class="container bio d-block d-md-none">
@@ -116,7 +116,7 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum dolor.</h2>
@@ -129,12 +129,12 @@
 				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-02.jpg" class="img-fluid" alt="Vías de tren">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-03.jpg" class="img-fluid" alt="Personal en obra">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
@@ -147,12 +147,12 @@
 				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-05.jpg" class="img-fluid" alt="Dique Punta Negra">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
@@ -165,12 +165,12 @@
 				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
@@ -183,7 +183,7 @@
 				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-RETRATO-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-08.jpg" class="img-fluid" alt="Veladero, San Juan">
 			</div>
 		</div>
 	</div>
