--- a/es/fotografia/infraestructura.html
+++ b/es/fotografia/infraestructura.html
@@ -100,8 +100,8 @@
 	</header>
 	
 	<div>
-		<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-FOTO-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
-		<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-FOTO-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
+		<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-FOTO-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
+		<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-FOTO-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
 	</div>
 
 	<div class="container bio d-block d-md-none">
@@ -116,7 +116,7 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Aprovechamiento Hidroeléctrico Los Caracoles, San Juan</h2>
@@ -129,12 +129,12 @@
 				<p class="texto">El tren actualmente circula más de 400 kilómetros para unir Mar del Plata con Buenos Aires con 12 paradas intermedias en localidades del interior bonaerense.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-02.jpg" class="img-fluid" alt="Vías de tren">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-03.jpg" class="img-fluid" alt="Personal en obra">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Personal en obra</h2>
@@ -147,12 +147,12 @@
 				<p class="texto">Pascualama es el primer proyecto minero binacional del mundo y consiste en desarrollar una mina que comparten Chile y Argentina.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-05.jpg" class="img-fluid" alt="Dique Punta Negra">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Paredón Punta Negra, San Juan</h2>
@@ -165,12 +165,12 @@
 				<p class="texto">Se inauguró el 21 de octubre de 2016 luego de 4 años de construcción. Integra junto al Colón y el Teatro Argentino de La Plata las salas más importantes del país.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Canal de desvío Caracoles, San Juan</h2>
@@ -183,7 +183,7 @@
 				<p class="texto">Se encuentra en Iglesia, a 370 kilómetros de la ciudad de San Juan, y a 4.000 metros de altura en la cordillera de los Andes.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INFRAESTRUCTURA-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-INFRAESTRUCTURA-08.jpg" class="img-fluid" alt="Veladero, San Juan">
 			</div>
 		</div>
 
