--- a/es/fotografia/naturaleza.html
+++ b/es/fotografia/naturaleza.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>GHM - Fotografía Extremo</title>
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
+	<title>GHM - Fotografía Naturaleza</title>
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body class="fotografia">
@@ -54,7 +54,7 @@
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" id="navBarFotografia" data-toggle="dropdown" role="button">FOTOGRAFÍA</a>
 							<div class="dropdown-menu" aria-labelledby="navBarFotografia">
-					        	<a class="dropdown-item" href="naturaleza.html">Naturaleza</a>
+					        	<a class="dropdown-item" href="#">Naturaleza</a>
 					        	<a class="dropdown-item" href="institucional.html">Institucional</a>
 					        	<a class="dropdown-item" href="infraestructura.html">Infraestructura</a>
 					        	<a class="dropdown-item" href="artistico.html">Artístico</a>
@@ -63,7 +63,7 @@
 					        	<a class="dropdown-item" href="retrato.html">Retrato</a>
 					        	<a class="dropdown-item" href="pruducciones.html">Producciones en estudio</a>
 					        	<a class="dropdown-item" href="agricultura.html">Agricultura</a>
-					        	<a class="dropdown-item" href="#">Cruce de Los Andes</a>
+					        	<a class="dropdown-item" href="cruce.html">Cruce de Los Andes</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
@@ -100,15 +100,16 @@
 	</header>
 	
 	<div>
-		<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
-		<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
+		<img src="../../img/FOTOGRAFIA-NATURALEZA-01.jpg" class="d-none d-md-block img-fluid">
+		<img src="../../img/FOTOGRAFIA-NATURALEZA.jpg" class="d-block d-md-none img-fluid">
 	</div>
 
 	<div class="container bio d-block d-md-none">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
-				<h1 class="titulo text-bio">Lorem ipsum dolor.</h1>
-				<p class="texto text-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur earum voluptas ad rem non voluptatum optio numquam!</p>
+				<h1 class="titulo text-bio">Lago Caviahue, Neuquén</h1>
+				<p class="texto text-bio">Ubicado en el departamento Ñorquín, es un lago de
+				los más significativos de la cuenca del río Neuquen, y un ambiente único en sudamérica por la extrema acidez de sus aguas.</p>
 			</div>
 		</div>
 	</div>
@@ -116,74 +117,74 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-02.jpg" class="img-fluid" alt="Cabo de Hornos">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore deleniti consequatur, odit distinctio, magni sapiente quo.</p>
+				<h2 class="titulo">Cabo de Hornos</h2>
+				<p class="texto">Es una de las Islas Wollaston de Chile, que forman parte del archipiélago de Tierra del Fuego. Para los marinos navegar en ella es uno de los desafíos más grandes.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
+				<h2 class="titulo">Cerro Fitz Roy, Santa Cruz</h2>
+				<p class="texto">Con 3.405 metros de altura, el cerro Fitz Roy aparece como una de las montañas más difíciles de escalar del mundo.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-03.jpg" class="img-fluid" alt="Cerro Fitz Roy">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-04.jpg" class="img-fluid" alt="Perú">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nesciunt at sunt, necessitatibus culpa! Rem, maiores, voluptates.</p>
+				<h2 class="titulo">Perú</h2>
+				<p class="texto">En Perú no hace falta ir hasta el campo para ver llamas, alpacas, guanacos y vicuñas; incluso circulan por pleno centro de Cusco.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
+				<h2 class="titulo">Camisea, Perú</h2>
+				<p class="texto">Uno de los proyectos que desarrolló la empresa Techint en Perú que consistía en la construcción y tendido de ductos de gas natural.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-05.jpg" class="img-fluid" alt="Camisea, Perú">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-06.jpg" class="img-fluid">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique delectus harum, itaque debitis in, repudiandae atque dolore!</p>
+				<h2 class="titulo">Tren a las Nubes, Salta</h2>
+				<p class="texto">El tren parte de la ciudad de Salta, atraviesa el Valle de Lerma para introducirse en la Quebrada del Toro y llegar hasta la Puna de Atacama, llegando a más de 4220 msnm de altura.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
+				<h2 class="titulo">La Trochita, Chubut</h2>
+				<p class="texto">Conocido como el Viejo Expreso Patagónico, realiza un servicio turístico entre Esquel y Nahuel Pan y periódicamente hasta El Maitén.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-07.jpg" class="img-fluid" alt="Camisea, Perú">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-08.jpg" class="img-fluid">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Reserva de biósfera San Guillermo, San Juan</h2>
+				<p class="texto">Ubicado en el departamento de Iglesia, tiene el fin de preservar sus características naturales y culturales.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Valle de Los Patos, San Juan</h2>
+				<p class="texto">Camino que eligió el Gral. San Martín para atravesar la Cordillera, y donde actualmente se realiza la expedición del Cruce de los Andes.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-NATURALEZA-09.jpg" class="img-fluid" alt="Camisea, Perú">
 			</div>
 		</div>
 	</div>
