--- a/es/index.html
+++ b/es/index.html
@@ -478,12 +478,12 @@
 
 					<a data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li><a class="item-footer" href="#">Acerca de GHM</a></li>
-						<li><a class="item-footer" href="huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li><a class="item-footer" href="#.">Equipo</a></li>
-						<li><a class="item-footer" href="#.">Clientes</a></li>
-						<li><a class="item-footer" href="#.">Noticias</a></li>
-						<li><a class="item-footer" href="#.">Contacto</a></li>
+						<li class="item-footer"><a class="item-footer" href="#">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="huevo.html">Gustavo Muñoz Lorenzo</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Contacto</a></li>
 					</ul>
 
 					<a data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
@@ -503,16 +503,16 @@
 
 					<a data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
-						<li><a class="item-footer" href="fotografia/institucional.html">Institucional</a></li>
-						<li><a class="item-footer" href="fotografia/infraestructura.html">Infraestructura</a></li>
-						<li><a class="item-footer" href="fotografia/artistico.html">Artístico</a></li>
-						<li><a class="item-footer" href="fotografia/extremo.html">Extremo</a></li>
-						<li><a class="item-footer" href="fotografia/publicitaria.html">Publicitaria</a></li>
-						<li><a class="item-footer" href="fotografia/retrato.html">Retrato</a></li>
-						<li><a class="item-footer" href="fotografia/prudcciones.html">Producciones en estudio</a></li>
-						<li><a class="item-footer" href="fotografia/agricultura.html">Agricultura</a></li>
-						<li><a class="item-footer" href="fotografia/cruce.html">Cruce de Los Andes</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/institucional.html">Institucional</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/infraestructura.html">Infraestructura</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/artistico.html">Artístico</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/extremo.html">Extremo</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/publicitaria.html">Publicitaria</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/retrato.html">Retrato</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/prudcciones.html">Producciones en estudio</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/agricultura.html">Agricultura</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/cruce.html">Cruce de Los Andes</a></li>
 					</ul>
 
 					<a data-toggle="" href="#footer-diseño" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Diseño<span class="closeNav d-lg-none">+</span></a>
@@ -530,9 +530,9 @@
 
 					<a data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li><a class="item-footer" href="#.">Stand</a></li>
-						<li><a class="item-footer" href="#.">Arquigrafía</a></li>
-						<li><a class="item-footer" href="#.">Exposiciones</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Stand</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Arquigrafía</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Exposiciones</a></li>
 					</ul>
 
 					<h6 class="titulo-footer border-top">Monitoreo</h6>
@@ -541,8 +541,8 @@
 
 					<a data-toggle="" href="#footer-Drone" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Vuelos<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-Drone" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li><a class="item-footer" href="#.">Drone</a></li>
-						<li><a class="item-footer" href="#.">Helicóptero</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Drone</a></li>
+						<li class="item-footer"><a class="item-footer" href="#.">Helicóptero</a></li>
 					</ul>
 				</div>
 
@@ -555,7 +555,7 @@
 						<li class="item-footer">Esteban Echeverría <br class="d-none d-lg-block">772 Sur (5400)</li>
 						<li class="item-footer">San Juan · Argentina</li>
 						<li class="item-footer">+54 264 4266621 | 4085014</li>
-						<li><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
+						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 						<ul class="lista-footer redes">
 							<a href="https://www.youtube.com/channel/UC1i1fEIsMjAJA5peqehEHiw" target="_blank"><span class="icon-youtube"></span></a>
 							<a href="https://www.facebook.com/Ghmtv/" target="_blank"><span class="icon-facebook"></span></a>
@@ -566,7 +566,7 @@
 
 					<a data-toggle="" href="#footer-trabaja" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Trabajá con nosotros<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-trabaja" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
+						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 					</ul>
 					<div class="d-12 col-md-6 col-lg-3 class-aux border-top"></div>
 
