Ajustando detalles en monitoreo

--- a/es/index.html
+++ b/es/index.html
@@ -535,7 +535,7 @@
 						<li class="item-footer"><a class="item-footer" href="#.">Exposiciones</a></li>
 					</ul>
 
-					<h6 class="titulo-footer border-top">Monitoreo</h6>
+					<a data-toggle="" href="#." aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
