--- a/es/index.html
+++ b/es/index.html
@@ -437,7 +437,7 @@
 					</p>
 				</div>
 				<div class="col-12 text-center">
-					<a href="#" class="btn-default">
+					<a href="mailto:ghmtv@ghmtv.com" class="btn-default">
 						<span class="icon-chevron-thin-right"></span>
 						Enviar mail
 					</a>
@@ -449,14 +449,33 @@
 	<!-- Mapa -->
 	<div class="index mapa">
     	<div id="map">
-    		<div class="fondo-mapa"></div>
     	</div>
 	    <script>
 	      function initMap() {
 	        var ghm = {lat: -31.537869, lng: -68.560407};
 	        var map = new google.maps.Map(document.getElementById('map'), {
 	          zoom: 16,
-	          center: ghm
+	          center: ghm,
+	          styles: [
+						{"elementType": "geometry", "stylers": [{"color": "#f5f5f5"}]},
+						{"elementType": "labels.icon", "stylers": [{"visibility": "off"}]},
+						{"elementType": "labels.text.fill", "stylers": [{"color": "#616161"}]},
+						{"elementType": "labels.text.stroke", "stylers": [{"color": "#f5f5f5"}]},
+						{"featureType": "administrative.land_parcel", "elementType": "labels.text.fill","stylers": [{"color": "#bdbdbd"}]},
+						{"featureType": "poi", "elementType": "geometry", "stylers": [{"color": "#eeeeee"}]},
+						{"featureType": "poi", "elementType": "labels.text.fill", "stylers": [{"color": "#757575"}]},
+						{"featureType": "poi.park", "elementType": "geometry", "stylers": [{"color": "#e5e5e5"}]},
+						{"featureType": "poi.park","elementType": "labels.text.fill","stylers": [{"color": "#9e9e9e"}]},
+						{"featureType": "road","elementType": "geometry","stylers": [{"color": "#ffffff"}]},
+						{"featureType": "road.arterial","elementType": "labels.text.fill","stylers": [{"color": "#757575"}]},
+						{"featureType": "road.highway","elementType": "geometry","stylers": [{"color": "#dadada"}]},
+						{"featureType": "road.highway", "elementType": "labels.text.fill","stylers": [{"color": "#616161"}]},
+						{"featureType": "road.local", "elementType": "labels.text.fill","stylers": [{"color": "#9e9e9e"}]},
+						{"featureType": "transit.line", "elementType": "geometry","stylers": [{"color": "#e5e5e5"}]},
+						{"featureType": "transit.station", "elementType": "geometry","stylers": [{"color": "#eeeeee"}]},
+						{"featureType": "water","elementType": "geometry","stylers": [{"color": "#c9c9c9"}]},
+						{"featureType": "water","elementType": "labels.text.fill","stylers": [{"color": "#9e9e9e"}]}
+					]
 	        });
 	        var marker = new google.maps.Marker({
 	          position: ghm,
