armando la estructura de todas las carpetas en español

--- a/es/huevo.html
+++ b/es/huevo.html
@@ -15,7 +15,7 @@
 				<div class="col-2 text-right ml-auto">
 					<a href="#" id="langEsp" class="lang active">ES</a>
 					<span class="lang">/</span>
-					<a href="../eng/huevo.html" id="langEng" class="lang">EN</a>
+					<a href="../en/index.html" id="langEng" class="lang">EN</a>
 				</div>
 			</div>
 		</div>
@@ -32,7 +32,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
 					<div id="nav-icon" class="nav-icon">
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+						<!-- <span class="icon-bar"></span> -->
 						<span class="icon-bar"></span>
 					</div>
 				</button>
@@ -42,7 +42,7 @@
 				<div class="collapse navbar-collapse" id="navbar">
 					<ul class="navbar-nav" id="navbar-nav-lp">
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL<span id="closeNav1" class="closeNav d-lg-none">+</span></a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarAudiovisual">
 					        	<a class="dropdown-item" href="#.">Institucional</a>
 					        	<a class="dropdown-item" href="#.">Infraestructura</a>
@@ -84,7 +84,7 @@
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarMonitoreo" data-toggle="dropdown" role="button">MONITOREO<span class="closeNav d-lg-none">+</span></a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarMonitoreo" data-toggle="dropdown" role="button">MONITOREO</a>
 							<div class="dropdown-menu" aria-labelledby="navBarMonitoreo">
 					        </div>
 						</li>
@@ -101,7 +101,7 @@
 							<div class="col-12 text-left">
 								<a href="#" id="langEsp" class="lang active">ES</a>
 								<span class="lang">/</span>
-								<a href="../eng/huevo.html" id="langEng" class="lang">EN</a>
+								<a href="../eng/index.html" id="langEng" class="lang">EN</a>
 							</div>
 						</div>
 					</div>
@@ -175,6 +175,7 @@
 			</div>
 		</div>
 	</div>
+
 	<!-- Footer -->
 	<footer>
 		<div class="container">
