--- a/es/index.html
+++ b/es/index.html
@@ -45,11 +45,11 @@
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarAudiovisual">
-					        	<a class="dropdown-item" href="#.">Institucional</a>
-					        	<a class="dropdown-item" href="#.">Infraestructura</a>
-					        	<a class="dropdown-item" href="#.">Educativo</a>
-					        	<a class="dropdown-item" href="#.">Publicitario</a>
-					        	<a class="dropdown-item" href="#.">Mapping</a>
+					        	<a class="dropdown-item" href="audiovisual/institucional.html">Institucional</a>
+					        	<a class="dropdown-item" href="audiovisual/infraestructura.html">Infraestructura</a>
+					        	<a class="dropdown-item" href="audiovisual/educativo.html">Educativo</a>
+					        	<a class="dropdown-item" href="audiovisual/publicitario.html">Publicitario</a>
+					        	<a class="dropdown-item" href="audiovisual/mapping.html">Mapping</a>
 					        </div>
 
 						</li>
@@ -71,29 +71,29 @@
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarDiseño" data-toggle="dropdown" role="button">DISEÑO<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarDiseño">
-					        	<a class="dropdown-item" href="#">Gráfica</a>
-					        	<a class="dropdown-item" href="#">Editorial</a>
-					        	<a class="dropdown-item" href="#">Digital</a>
+					        	<a class="dropdown-item" href="diseño/grafico.html">Gráfica</a>
+					        	<a class="dropdown-item" href="diseño/editorial.html">Editorial</a>
+					        	<a class="dropdown-item" href="diseño/digital.html">Digital</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarEspacios" data-toggle="dropdown" role="button">ESPACIOS<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarEspacios">
-					        	<a class="dropdown-item" href="#">Stand</a>
-					        	<a class="dropdown-item" href="#">Arquigrafía</a>
-					        	<a class="dropdown-item" href="#">Exposiciones</a>
+					        	<a class="dropdown-item" href="espacios/stand.html">Stand</a>
+					        	<a class="dropdown-item" href="espacios/arquigrafia.html">Arquigrafía</a>
+					        	<a class="dropdown-item" href="espacios/exposiciones.html">Exposiciones</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarMonitoreo" data-toggle="dropdown" role="button">MONITOREO</a>
+							<a href="monitoreo/monitoreo.html" class="nav-link navClose-link" id="navBarMonitoreo" data-toggle="" role="button">MONITOREO</a>
 							<div class="dropdown-menu" aria-labelledby="navBarMonitoreo">
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarVuelos" data-toggle="dropdown" role="button">VUELOS<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu ultimo" aria-labelledby="navBarVuelos">
-					        	<a class="dropdown-item" href="#">Drone</a>
-					        	<a class="dropdown-item" href="#">Helicóptero</a>
+					        	<a class="dropdown-item" href="vuelos/drone.html">Drone</a>
+					        	<a class="dropdown-item" href="vuelos/helicoptero.html">Helicóptero</a>
 					        </div>
 						</li>
 					</ul>
